<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brown3"
    android:padding="6dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity2">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="390dp"
        android:layout_margin="40dp"
        app:cardCornerRadius="30dp"
        android:background="@drawable/custom_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_gravity="center"
            android:background="#AD715D"
            android:orientation="vertical"
            android:padding="14dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="60dp"
                android:hint="@string/username"
                android:inputType=""
                android:padding="8dp"
                android:textColor="#032FF4"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#032FF4"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/submit"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>