<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brown"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainpageActivity2">


    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="556dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/brown2"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="318dp"
            android:layout_height="384dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="chess image"
            app:srcCompat="@drawable/chessimage5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textView1"
                android:layout_width="316dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:backgroundTint="#EFE7E7"
                android:gravity="center|top"
                android:hint="@string/player_1"
                android:inputType="text|textPersonName"
                android:maxLines="1"
                android:textColor="#F2EBEB"
                android:textColorHint="#665D5D"
                android:textSize="34sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/textView2"
                android:layout_width="318dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:hint="@string/player_2"
                android:inputType="text|textPersonName"
                android:lines="1"
                android:textColor="#F2EBEB"
                android:textColorHint="#665D5D"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="#FBF8F8"
                android:padding="10dp"
                android:text="@string/button_text"
                android:textColor="#0F0E0E"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>